# pyuring

./: .dockerignore  .gitignore  CHANGELOG.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  README.md  TODO  USAGE.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  setup.py
csrc/: bench_direct.c  uring_wrap.c
docker/: Dockerfile.verify
docs/: BENCHMARKS.md  BENCHMARK_DOCKER.md  CHANGELOG.md  INSTALLATION.md  SUPPORT.md  TESTING.md  USAGE.md  guide.html  index.md
examples/: BENCHMARKS.md  EXAMPLES.md  README.md  async_file_server.py  asyncio_file_io.py  bench_async_vs_sync.py  bench_copy.py  bench_manyfiles_write.py  bench_rand_read.py  bench_read.py  bench_syscalls.py  bench_write_newfile.py  bench_writev_newfile.py  compare_syscalls.sh  concurrent_file_reads.py  database_wal.py  dataset_loader.py  db_wal.py  demo_async_api.py  demo_copy.py  demo_copy_dynamic.py  demo_dynamic_buffer.py  demo_read.py  demo_write_tmp.py  dl_checkpoint.py  fsync_heavy_writes.py  ml_dataloader.py  object_storage_ingest.py  test_dynamic_buffer.py  web_access_log.py  web_file_serving.py
misc/: fetch_liburing.sh
pyiouring/: __init__.py  _easy.py  _native.py
python/: __init__.py  bench_copy.py  bench_manyfiles_write.py  bench_rand_read.py  bench_read.py  bench_write_newfile.py  demo_copy.py  demo_copy_dynamic.py  demo_dynamic_buffer.py  demo_read.py  demo_write_tmp.py  uringwrap.py
pyuring/: __init__.py  __init__.pyi  _easy.py  _native.py  aio.py  async_file.py  buffer_ring.py  capabilities.py  pool.py  ring_presets.py
scripts/: cibw_before_all.sh  docker-test-matrix.sh  (+4 more)
(+63 files in other folders)
